Right to left display of ko in admin interface and some labels are in English instead of Arabic - EXO-73560 - Meeds-io/meeds#2308. Before this change, when you set the language to Arabic as a plf admin and access the admin site, the platform settings menu is positioned on the left and is not fully displayed due to an overlap with the main settings block. After this change, the right to left display in the platform settings menu without overlap is displayed correctly.

--- a/webapp/portlet/src/main/webapp/skin/less/portlet/VerticalMenu/Style.less
+++ b/webapp/portlet/src/main/webapp/skin/less/portlet/VerticalMenu/Style.less
@@ -35,3 +35,6 @@
   position: fixed !important;
   .specific-scrollbar()
 }
+.right-0 {
+  right: 0 !important;
+}
